--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   shop:
     container_name: shopware5
-    image: dockware/${FLAVOUR}:${VERSION}
+    image: dockware/dev:latest
     ports:
       - "22:22" # ssh
       - "80:80" # apache2
